@@ -33,4 +33,4 @@ import(methods)
 importFrom(Rcpp,sourceCpp)
 importFrom(triebeard,longest_match)
 importFrom(triebeard,trie)
-useDynLib(urltools)
+useDynLib(urltools, .registration = TRUE)
