@@ -1,9 +1,9 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/RcppExports.R
 \name{strip_credentials}
+\alias{strip_credentials}
 \alias{creds}
 \alias{get_credentials}
-\alias{strip_credentials}
 \title{Get or remove user authentication credentials}
 \usage{
 strip_credentials(urls)
@@ -26,4 +26,3 @@ strip_credentials("http://foo:bar@97.77.104.22:3128")
 # Get credentials
 get_credentials("http://foo:bar@97.77.104.22:3128")
 }
-
