@@ -1,8 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/RcppExports.R
 \name{puny_encode}
-\alias{puny_decode}
 \alias{puny_encode}
+\alias{puny_decode}
 \title{Encode or Decode Internationalised Domains}
 \usage{
 puny_encode(x)
@@ -34,4 +34,3 @@ puny_decode("https://www.xn--bcher-kva.com/foo")
 \seealso{
 \code{\link{url_decode}} and \code{\link{url_encode}} for percent-encoding.
 }
-
