@@ -37,4 +37,3 @@ tld_extract(domains, tld_refresh())
 \seealso{
 \code{\link{suffix_extract}} for retrieving suffixes (distinct from TLDs).
 }
-
