@@ -37,4 +37,3 @@ url_parse("https://en.wikipedia.org/wiki/Article")
 \code{\link{url_parameters}} for extracting values associated with particular keys in a URL's
 query string, and \code{\link{url_compose}}, which is \code{url_parse} in reverse.
 }
-
