@@ -4,9 +4,11 @@ Version 1.7.0 [WIP]
 FEATURES
 * get_credentials() and strip_credentials() retrieve and remove user authentication info
 from URLs, as appropriate (#64)
+
 BUGS
 * url_parse now handles URLs with user auth/ident information in them, stripping it out (#64)
-* url_parse now handles URL that are IPv6 addresses (#65)
+* url_parse now handles URLs that are IPv6 addresses (#65)
+* url_parse now handles URLs with @ characters in query fragments
 
 Version 1.6.0
 -------------------------------------------------------------------------
